--- a/ChatApplication/src/main/resources/application.properties
+++ b/ChatApplication/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ChatApp
+# MySQL Database Connection Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/chatapplication
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
