--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,14 +1,24 @@
-spring.application.name=Jwt
+spring.application.name=Rider
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/User_management
+
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/rider
 spring.datasource.username=root
 spring.datasource.password=root
 
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#logging.level.org.springframework.security=DEBUG
+
+# application.properties
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=1MB
+#spring.servlet.multipart.max-request-size=1MB
